body overflow to avoid flicker

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -795,6 +795,10 @@ select {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
